added test script in main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,11 @@
 		"ostream": "cpp",
 		"iosfwd": "cpp",
 		"cmath": "cpp",
-		"chrono": "cpp"
+		"chrono": "cpp",
+		"*.tcc": "cpp",
+		"deque": "cpp",
+		"string": "cpp",
+		"unordered_map": "cpp",
+		"vector": "cpp"
 	}
 }
