--- a/bloom_filter/Makefile
+++ b/bloom_filter/Makefile
@@ -1,4 +1,4 @@
 
 run: bloom_filter.cpp
-	g++ bloom_filter.cpp
-	./a.out $(TEST_FILE) $(BIT_COUNT) $(EXPECTED_INSERT)
+	@g++ bloom_filter.cpp
+	@./a.out $(TEST_FILE) $(BIT_COUNT) $(EXPECTED_INSERT)
