split into hpp and test main file

--- a/bloom_filter/Makefile
+++ b/bloom_filter/Makefile
@@ -1,4 +1,4 @@
 
-run: bloom_filter.cpp
-	@g++ bloom_filter.cpp
+run: test_string.cpp bloom_filter.hpp
+	@g++ test_string.cpp bloom_filter.hpp
 	@./a.out $(TEST_FILE) $(BIT_COUNT) $(EXPECTED_INSERT)
