added test cases and make targets for int and double

--- a/bloom_filter/Makefile
+++ b/bloom_filter/Makefile
@@ -1,4 +1,12 @@
 
-run: test_string.cpp bloom_filter.hpp
+run_string: test_string.cpp bloom_filter.hpp
 	@g++ test_string.cpp bloom_filter.hpp
+	@./a.out $(TEST_FILE) $(BIT_COUNT) $(EXPECTED_INSERT)
+
+run_int: test_int.cpp bloom_filter.hpp
+	@g++ test_int.cpp bloom_filter.hpp
+	@./a.out $(TEST_FILE) $(BIT_COUNT) $(EXPECTED_INSERT)
+
+run_double: test_double.cpp bloom_filter.hpp
+	@g++ test_double.cpp bloom_filter.hpp
 	@./a.out $(TEST_FILE) $(BIT_COUNT) $(EXPECTED_INSERT)
